<resources>

    <string name="app_name">AsyncListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FrozenNAS</string>
    <string name="action_settings">Settings</string>
    <string name="s3accesskey_preference">S3 Access Key</string>
    <string name="summary_edittext_preference"></string>
    <string name="dialog_title_s3accesskey_preference">Enter S3 Access Key</string>
    <string name="s3seckey_preference">S3 Secret Key</string>
    <string name="dialog_title_s3seckey_preference">Enter S3 Secret Key</string>
    <string name="s3bucket_preference">S3 Bucket</string>
    <string name="dialog_title_s3bucket_preference">Enter S3 Bucket</string>
    <string name="s3rootfolder_preference">Encrypted Root Folder</string>
    <string name="dialog_title_s3rootfolder_preference">Enter Encrypted Root Folder</string>
    <string name="encfskey_preference">Encfs Password</string>
    <string name="dialog_title_encfskey_preference">Enter Encfs Password</string>
    <string name="availabilitydays_preference">Days of availability after restore</string>
    <string name="availabilitydays_preference_title">Enter number of days of availability after restore</string>
    <string name="pref_availabilitydays_default">1</string>
    <string name="title_activity_settings">FrozenNAS Preferences</string>
    <string name="encfsvolumefile_preference">Encfs Volume File (.encfs6.xml)</string>
    
    
</resources>